--- a/serverless/Cargo.toml
+++ b/serverless/Cargo.toml
@@ -8,5 +8,6 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [dependencies]
 shared = { path = "../shared", features = ["server"] }
+worker = "0.0.18"
 
 [build-dependencies]
