--- a/browser/Cargo.toml
+++ b/browser/Cargo.toml
@@ -21,7 +21,7 @@ dev = [
 
 [dependencies]
 shared = { path = "../shared", features = ["browser"] }
-wasm-bindgen = "0.2.84"
+wasm-bindgen = "^0.2.87"
 chrono = { version = "0.4.26", optional = true }
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
