--- a/html_generator/Cargo.toml
+++ b/html_generator/Cargo.toml
@@ -16,14 +16,14 @@ once_cell = "1.18.0"
 serde = "1.0.174"
 serde_json = "1.0.103"
 tokio = { version = "1.29.1", features = ["full"] }
-ts-rs = "6.2.1"
+ts-rs = "7.0.0"
 minify-html = "0.11.1"
 minify-js = "0.5.6"
 rayon = "1.7.0"
 tree_magic = "0.2.3"
 base64 = { version = "0.21.2" }
 chrono = "0.4.26"
-dioxus-router = { version = "0.4.1", features = ["ssr"] }
+dioxus-router = { version = "^0.4.1", features = ["ssr"] }
 async-io = "1.13.0"
 struct_iterable = "0.1.1"
 arraygen = "0.3.2"
