--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
 		"./Cargo.toml",
 		"./browser/Cargo.toml",
 		"./html_generator/Cargo.toml",
-		"./serverless/Cargo.toml"
+		"./serverless_functions/Cargo.toml"
 	],
 	"rust-analyzer.showUnlinkedFileNotification": false
 }
