--- a/browser/Cargo.toml
+++ b/browser/Cargo.toml
@@ -48,6 +48,7 @@ web-sys = { version = "0.3.4", features = [
 ] }
 serde = "1.0.183"
 serde_json = "1.0.104"
+wee_alloc = "0.4.5"
 
 [build-dependencies]
 chrono = "0.4.26"
