Add a profile_bundle_size script.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ dev = "./scripts dev"
 build = "./scripts build"
 preview = "./scripts preview"
 deploy = "./scripts deploy"
+profile_bundle_size = "./scripts profile_bundle_size"
 setup = "chmod +x ./scripts && ./scripts setup"
