--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -18,6 +18,8 @@ worker = "^0.0.18"
 shared = { path = "../shared", features = ["server"] }
 serde = "1.0.188"
 notion = "0.5.1"
+serde_json = "1.0.107"
+reqwest = "0.11.20"
 
 [profile.release]
 lto = true
