--- a/html_generator_hack/Cargo.toml
+++ b/html_generator_hack/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "html_generator"
+name = "html_generator_hack"
 version = "0.1.0"
 edition = "2021"
 description = "The server for this project, used during development and for building the site."
@@ -8,26 +8,10 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [dependencies]
 shared = { path = "../shared", features = ["server"] }
-color-eyre = "0.6.2"
 dioxus = "0.4.0"
 dioxus-ssr = { version = "0.4.0" }
-image = { version = "0.24.6", features = ["webp-encoder"] }
-once_cell = "1.18.0"
-serde = "1.0.174"
-serde_json = "1.0.103"
-tokio = { version = "1.29.1", features = ["full"] }
-ts-rs = "7.0.0"
-minify-html = "0.11.1"
-minify-js = "0.5.6"
-rayon = "1.7.0"
-tree_magic = "0.2.3"
-base64 = { version = "0.21.2" }
-chrono = "0.4.26"
 dioxus-router = { version = "^0.4.1", default-features = false, features = [
     "ssr",
 ] }
-async-io = "1.13.0"
-struct_iterable = "0.1.1"
-arraygen = "0.3.2"
 
 [build-dependencies]
