--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -16,7 +16,7 @@ crate-type = ["cdylib"]
 [dependencies]
 worker = "^0.0.18"
 shared = { path = "../shared", features = ["server"] }
-html_generator_hack = { path = "../html_generator_hack" }
+html_generator = { path = "../html_generator" }
 serde = "1.0.188"
 serde_json = "1.0.107"
 
