--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -16,11 +16,21 @@ crate-type = ["cdylib"]
 [dependencies]
 worker = "^0.0.18"
 shared = { path = "../shared", features = ["server"] }
-html_generator = { path = "../html_generator" }
 serde = "1.0.188"
 serde_json = "1.0.107"
+once_cell = "1.18.0"
+chrono = "0.4.26"
+struct_iterable = "0.1.1"
+arraygen = "0.3.2"
+strum = "0.25.0"
+strum_macros = "0.25.2"
+maud = "0.25.0"
+# assets = { path = "../assets" }
 
 [profile.release]
 lto = true
 strip = true
 codegen-units = 1
+
+[build-dependencies]
+# assets = { path = "../assets", features = ["build"] }
