--- a/serverless_functions/package.json
+++ b/serverless_functions/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "serverless_functions",
-	"version": "0.0.1",
-	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev"
-	},
-	"dependencies": {
-		"wrangler": "3.8.0"
-	}
+  "name": "serverless_functions",
+  "version": "0.0.1",
+  "scripts": {
+    "deploy": "cargo build --release && wrangler deploy",
+    "dev": "cargo build --release && wrangler dev"
+  },
+  "dependencies": {
+    "wrangler": "3.8.0"
+  }
 }
