--- a/new_assets/Cargo.toml
+++ b/new_assets/Cargo.toml
@@ -7,10 +7,16 @@ license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [features]
-build = ["minify-js"]
+build = ["minify-js", "tree_magic", "image", "base64"]
 
 [dependencies]
+arraygen = "0.3.2"
+once_cell = "1.18.0"
+image = { version = "0.24.7", optional = true }
 minify-js = { version = "0.5.6", optional = true }
+tree_magic = { version = "0.2.3", optional = true }
+rayon = "1.8.0"
+base64 = { version = "0.21.4", optional = true }
 
 # # Always build the image crate with optimizations enabled, even in debug mode.
 # [profile.dev.package.image]
