--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-	"rust-analyzer.linkedProjects": [
-		"./Cargo.toml",
-		"./browser/Cargo.toml",
-		"./html_generator/Cargo.toml",
-		"./serverless_functions/Cargo.toml"
-	],
-	"rust-analyzer.showUnlinkedFileNotification": false
+  "rust-analyzer.linkedProjects": [
+    "./Cargo.toml",
+    "./browser/Cargo.toml",
+    "./html_generator/Cargo.toml",
+    "./serverless_functions/Cargo.toml"
+  ],
+  "rust-analyzer.showUnlinkedFileNotification": false,
+  "rust-analyzer.cargo.features": ["build"]
 }
