--- a/new_assets/Cargo.toml
+++ b/new_assets/Cargo.toml
@@ -7,6 +7,7 @@ license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [features]
+default = []
 build = ["minify-js", "tree_magic", "image", "base64"]
 
 [dependencies]
@@ -17,6 +18,9 @@ minify-js = { version = "0.5.6", optional = true }
 tree_magic = { version = "0.2.3", optional = true }
 rayon = "1.8.0"
 base64 = { version = "0.21.4", optional = true }
+cfg-if = "1.0.0"
+serde = "1.0.189"
+serde_json = "1.0.107"
 
 # # Always build the image crate with optimizations enabled, even in debug mode.
 # [profile.dev.package.image]
