--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ exclude = [
     # finish building.
     "browser",
 ]
-resolve = "2"
+resolver = "2"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
