--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 shared = { path = "../shared", features = ["server"] }
-new_assets = { path = "../new_assets" }
+new_assets = { path = "../new_assets", features = ["run"] }
 worker = "^0.0.18"
 serde = "1.0.188"
 serde_json = "1.0.107"
