--- a/new_assets/Cargo.toml
+++ b/new_assets/Cargo.toml
@@ -25,3 +25,6 @@ serde_json = "1.0.107"
 # # Always build the image crate with optimizations enabled, even in debug mode.
 # [profile.dev.package.image]
 # opt-level = 3
+
+[dev-dependencies]
+toml = "0.8.6"
