Delete the old, unused assets crate.

--- a/spin.toml
+++ b/spin.toml
@@ -18,9 +18,9 @@ watch = [
     "serverless_functions/**/*.rs",
     "serverless_functions/**/*.html",
     "serverless_functions/**/*.css",
-    "new_assets/**/*.rs",
-    "new_assets/**/*.html",
-    "new_assets/**/*.css",
+    "assets/**/*.rs",
+    "assets/**/*.html",
+    "assets/**/*.css",
     "browser/**/*.rs",
     "browser/**/*.html",
     "browser/**/*.css",
