--- a/assets/Cargo.toml
+++ b/assets/Cargo.toml
@@ -7,20 +7,24 @@ license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [features]
-build = ["image", "rayon"]
+default = []
+build = ["minify-js", "tree_magic", "image", "base64"]
 
 [dependencies]
-image = { version = "0.24.6", features = ["webp-encoder"], optional = true }
-once_cell = "1.18.0"
-serde = "1.0.174"
-serde_json = "1.0.103"
-minify-html = "0.11.1"
-minify-js = "0.5.6"
-rayon = { version = "1.7.0", optional = true }
-tree_magic = "0.2.3"
-base64 = { version = "0.21.2" }
-struct_iterable = "0.1.1"
 arraygen = "0.3.2"
-maud = "0.25.0"
+once_cell = "1.18.0"
+image = { version = "0.24.7", optional = true }
+minify-js = { version = "0.5.6", optional = true }
+tree_magic = { version = "0.2.3", optional = true }
+rayon = "1.8.0"
+base64 = { version = "0.21.4", optional = true }
+cfg-if = "1.0.0"
+serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.107"
 
-[build-dependencies]
+# # Always build the image crate with optimizations enabled, even in debug mode.
+# [profile.dev.package.image]
+# opt-level = 3
+
+[dev-dependencies]
+toml = "0.8.6"
