--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 shared = { path = "../shared", features = ["server"] }
-new_assets = { path = "../new_assets" }
+assets = { path = "../assets" }
 strum = "0.25.0"
 strum_macros = "0.25.2"
 maud = "0.25.0"
@@ -20,4 +20,4 @@ spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" } # The Spi
 anyhow = "1.0.75"
 
 [build-dependencies]
-new_assets = { path = "../new_assets", features = ["build"] }
+assets = { path = "../assets", features = ["build"] }
