--- a/assets/Cargo.toml
+++ b/assets/Cargo.toml
@@ -8,19 +8,20 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [features]
 default = []
-build = ["minify-js", "tree_magic", "image", "base64"]
+build = ["tree_magic", "image", "base64"]
 
 [dependencies]
 arraygen = "0.3.2"
 once_cell = "1.18.0"
 image = { version = "0.24.7", optional = true }
-minify-js = { version = "0.5.6", optional = true }
 tree_magic = { version = "0.2.3", optional = true }
 rayon = "1.8.0"
 base64 = { version = "0.21.4", optional = true }
 cfg-if = "1.0.0"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
+build_tailwind = { path = "../build_tailwind" }
+build_browser = { path = "../build_browser" }
 
 # # Always build the image crate with optimizations enabled, even in debug mode.
 # [profile.dev.package.image]
