--- a/spin.toml
+++ b/spin.toml
@@ -38,6 +38,6 @@ files = [{ source = "built_assets", destination = "/" }]
 # environment = { CACHE_CONTROl = "no-cache" }
 [component.trigger]
 route = "/built-assets/..."
-[component.build]
-command = ""
-watch = ["built_assets/**/*"]
+# [component.build]
+# command = ""
+# watch = ["built_assets/**/*"]
