--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -12,12 +12,11 @@ crate-type = ["cdylib"]
 [dependencies]
 shared = { path = "../shared", features = ["server"] }
 assets = { path = "../assets" }
-strum = "0.25.0"
-strum_macros = "0.25.2"
 maud = "0.25.0"
 http = "0.2"                                                           # General-purpose crate with common HTTP types.
 spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" } # The Spin SDK.
 anyhow = "1.0.75"
+build-time = "0.1.3"
 
 [build-dependencies]
 assets = { path = "../assets", features = ["build"] }
