--- a/build_tailwind/Cargo.toml
+++ b/build_tailwind/Cargo.toml
@@ -5,3 +5,11 @@ edition = "2021"
 description = ""
 license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
+
+[lib]
+proc-macro = true
+
+[dependencies]
+proc-macro2 = "1.0.69"
+quote = "1.0.33"
+syn = "2.0.39"
