--- a/build_browser/Cargo.toml
+++ b/build_browser/Cargo.toml
@@ -6,5 +6,11 @@ description = ""
 license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
-[build-dependencies]
+[lib]
+proc-macro = true
+
+[dependencies]
 minify-js = { version = "0.5.6" }
+proc-macro2 = "1.0.69"
+quote = "1.0.33"
+syn = "2.0.39"
