--- a/assets/Cargo.toml
+++ b/assets/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 build_tailwind = { path = "../build_tailwind" }
 build_browser = { path = "../build_browser" }
+build_images = { path = "../build_images" }
 mime_guess = "2.0.4"
 
 # # Always build the image crate with optimizations enabled, even in debug mode.
