Implement ToTokens for runtime build images types.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,12 @@ members = [
     # 
     "serverless_functions",
     "shared",
-    "assets",
-    "build_browser",
-    "build_tailwind",
-    "build_images",
-    "build_images_macro",
+    "assets/runtime",
+    "assets/build_browser",
+    "assets/build_tailwind",
+    "assets/build_images",
+    "assets/build_images_runtime",
+    "assets/build_images_macro",
 ]
 exclude = [
     # If we add the browser crate to the workspace, building causes
