--- a/assets/runtime/Cargo.toml
+++ b/assets/runtime/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0.107"
 build_tailwind = { path = "../build_tailwind" }
 build_browser = { path = "../build_browser" }
 build_images = { path = "../build_images" }
+build_images_macro = { path = "../build_images_macro" }
 mime_guess = "2.0.4"
 
 # # Always build the image crate with optimizations enabled, even in debug mode.
