--- a/assets/mod/Cargo.toml
+++ b/assets/mod/Cargo.toml
@@ -24,6 +24,7 @@ build_browser = { path = "../build_browser" }
 build_images = { path = "../build_images" }
 build_images_macro = { path = "../build_images_macro" }
 mime_guess = "2.0.4"
+mime = "0.3.17"
 
 # # Always build the image crate with optimizations enabled, even in debug mode.
 # [profile.dev.package.image]
