Switch the build_images! macro to use the log crate.

--- a/assets/build_images_macro/Cargo.toml
+++ b/assets/build_images_macro/Cargo.toml
@@ -20,6 +20,11 @@ mime = "0.3.17"
 rayon = "1.8.0"
 build_images_runtime = { path = "../build_images_runtime" }
 prettyplease = "0.2.15"
+log = "0.4.20"
+simple_logger = { version = "4.2.0", default_features = false, features = [
+    "stderr",
+    "colors",
+] }
 
 # Always build the image crate with optimizations enabled, even in dev, test, and benchmark mode.
 [profile.dev.package.image]
