--- a/assets/build_images_runtime/Cargo.toml
+++ b/assets/build_images_runtime/Cargo.toml
@@ -7,5 +7,6 @@ license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [dependencies]
+log = "0.4.20"
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
