--- a/assets/build_browser/Cargo.toml
+++ b/assets/build_browser/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 proc-macro = true
 
 [dependencies]
+log = "0.4.20"
 minify-js = { version = "0.5.6" }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
