--- a/assets/build_tailwind/Cargo.toml
+++ b/assets/build_tailwind/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 proc-macro = true
 
 [dependencies]
+log = "0.4.20"
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
 syn = "2.0.39"
