--- a/assets/build_browser/Cargo.toml
+++ b/assets/build_browser/Cargo.toml
@@ -10,8 +10,13 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 proc-macro = true
 
 [dependencies]
+macro_helpers = { path = "../macro_helpers" }
 log = "0.4.20"
 minify-js = { version = "0.5.6" }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
 syn = "2.0.39"
+simple_logger = { version = "4.2.0", default_features = false, features = [
+    "stderr",
+    "colors",
+] }
