--- a/assets/build_images_macro/Cargo.toml
+++ b/assets/build_images_macro/Cargo.toml
@@ -10,6 +10,8 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 proc-macro = true
 
 [dependencies]
+build_images_runtime = { path = "../build_images_runtime" }
+macro_helpers = { path = "../macro_helpers" }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
 syn = "2.0.39"
@@ -18,7 +20,6 @@ base64 = { version = "0.21.4" }
 walkdir = "2.4.0"
 mime = "0.3.17"
 rayon = "1.8.0"
-build_images_runtime = { path = "../build_images_runtime" }
 prettyplease = "0.2.15"
 log = "0.4.20"
 simple_logger = { version = "4.2.0", default_features = false, features = [
