--- a/assets/mod/Cargo.toml
+++ b/assets/mod/Cargo.toml
@@ -8,23 +8,19 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
 [features]
 default = []
-build = ["image", "base64"]
+build = []
 
 [dependencies]
 arraygen = "0.3.2"
 once_cell = "1.18.0"
-image = { version = "0.24.7", optional = true }
 rayon = "1.8.0"
-base64 = { version = "0.21.4", optional = true }
 cfg-if = "1.0.0"
-serde = { version = "1.0.189", features = ["derive"] }
-serde_json = "1.0.107"
 build_tailwind = { path = "../build_tailwind" }
 build_browser = { path = "../build_browser" }
 build_images = { path = "../build_images" }
 build_images_macro = { path = "../build_images_macro" }
-mime_guess = "2.0.4"
-mime = "0.3.17"
+
 
 [dev-dependencies]
+# For parsing spin.toml in tests.
 toml = "0.8.6"
