--- a/assets/mod/Cargo.toml
+++ b/assets/mod/Cargo.toml
@@ -6,21 +6,6 @@ description = "Assets processing."
 license = "unlicensed"
 repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 
-[features]
-default = []
-build = []
-
 [dependencies]
-arraygen = "0.3.2"
-once_cell = "1.18.0"
-rayon = "1.8.0"
-cfg-if = "1.0.0"
-build_tailwind = { path = "../build_tailwind" }
-build_browser = { path = "../build_browser" }
-build_images = { path = "../build_images" }
-build_images_macro = { path = "../build_images_macro" }
-
-
-[dev-dependencies]
-# For parsing spin.toml in tests.
-toml = "0.8.6"
+assets_runtime = { path = "../mod_runtime" }
+assets_macro = { path = "../mod_macro" }
