--- a/assets/mod_macro/Cargo.toml
+++ b/assets/mod_macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "build_images_macro"
+name = "assets_macro"
 version = "0.1.0"
 edition = "2021"
 description = ""
@@ -10,17 +10,12 @@ repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
 proc-macro = true
 
 [dependencies]
-build_images_runtime = { path = "../build_images_runtime" }
+assets_runtime = { path = "../mod_runtime" }
 parse_macro_arguments = { path = "../parse_macro_arguments" }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
 syn = "2.0.39"
-image = { version = "0.24.7" }
-base64 = { version = "0.21.4" }
-walkdir = "2.4.0"
-mime = "0.3.17"
 rayon = "1.8.0"
-prettyplease = "0.2.15"
 log = "0.4.20"
 simple_logger = { version = "4.2.0", default_features = false, features = [
     "stderr",
