Load CSS assets from the correct path.

--- a/spin.toml
+++ b/spin.toml
@@ -10,7 +10,7 @@ id = "invoke_serverless_functions"
 source = "target/wasm32-wasi/debug/serverless_functions.wasm"
 allowed_http_hosts = []
 # This makes assets available server-side in our serverless functions.
-files = [{ source = "built_assets", destination = "/built_assets" }]
+files = [{ source = "assets/built_assets", destination = "/built_assets" }]
 [component.trigger]
 route = "/..."
 [component.build]
