Refactor the build_tailwind! macro so it can be invoked in the serverless_functions crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ members = [
     "serverless_functions",
     "shared",
     "assets/mod",
-    "assets/mod_runtime",
-    "assets/mod_macro",
+    "assets/runtime",
+    "assets/macro",
     "assets/build_images",
     "assets/build_images_runtime",
     "assets/build_images_macro",
