--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -17,3 +17,4 @@ http = "0.2"                                                           # General
 spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" } # The Spin SDK.
 anyhow = "1.0.75"
 build-time = "0.1.3"
+once_cell = "1.18.0"
