--- a/assets/macro/Cargo.toml
+++ b/assets/macro/Cargo.toml
@@ -16,8 +16,10 @@ quote = "1.0.33"
 syn = "2.0.39"
 rayon = "1.8.0"
 log = "0.4.20"
-simple_logger = { version = "4.2.0", default_features = false, features = [
+simple_logger = { version = "4.2.0", default-features = false, features = [
     "stderr",
     "colors",
 ] }
 minify-js = { version = "0.5.6" }
+fs4 = "0.7.0"
+rand = "0.8.5"
