--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,5 @@
+# Populate the CARGO_WORKSPACE_DIR environment variable with the path to the
+# workspace directory.
 # https://github.com/rust-lang/cargo/issues/3946#issuecomment-973132993
 [env]
 CARGO_WORKSPACE_DIR = { value = "", relative = true }
