Refactor build_browser_crate! to use unique folder names so that concurrent invocations don't interfere with each other. This allows us to delete the lock_file module.

--- a/assets/macro/Cargo.toml
+++ b/assets/macro/Cargo.toml
@@ -29,3 +29,4 @@ prettyplease = "0.2.15"
 mime = "0.3.17"
 base64 = "0.21.5"
 image_captioner = "0.1.10"
+uuid = { version = "1.6.1", features = ["v4"] }
