--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -18,3 +18,4 @@ spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" } # The Spi
 anyhow = "1.0.75"
 build-time = "0.1.3"
 once_cell = "1.18.0"
+chrono = "0.4.31"
