--- a/serverless_functions/Cargo.toml
+++ b/serverless_functions/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "Serverless functions for this project for handling back end logic."
 license = "unlicensed"
-repository = "https://github.com/hyperbloom-ai/creative-computing-website/"
+repository = "https://github.com/rainsound-ai/rainsound.ai/"
 
 [lib]
 crate-type = ["cdylib"]
