--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "serverless_functions"
+name = "server"
 version = "0.1.0"
 edition = "2021"
 description = "Serverless functions for this project for handling back end logic."
