--- a/spin.toml
+++ b/spin.toml
@@ -6,8 +6,8 @@ trigger = { type = "http", base = "/" }
 version = "1.0"
 
 [[component]]
-id = "invoke_serverless_functions"
-source = "target/wasm32-wasi/release/serverless_functions.wasm"
+id = "invoke_server"
+source = "target/wasm32-wasi/release/server.wasm"
 allowed_http_hosts = []
 # This makes assets available server-side in our serverless functions.
 files = [{ source = "assets/built", destination = "/assets/built" }]
@@ -18,9 +18,9 @@ route = "/..."
 # ✨✨✨ This happens if you add the --release flag, for example.
 command = "cargo build --release --target wasm32-wasi"
 watch = [
-    "serverless_functions/**/*.rs",
-    "serverless_functions/**/*.html",
-    "serverless_functions/**/*.css",
+    "server/**/*.rs",
+    "server/**/*.html",
+    "server/**/*.css",
     "assets/**/*.rs",
     "assets/**/*.html",
     "assets/**/*.css",
