--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,16 +6,13 @@ description = "Serverless functions for this project for handling back end logic
 license = "unlicensed"
 repository = "https://github.com/rainsound-ai/rainsound.ai/"
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
 shared = { path = "../shared", features = ["server"] }
 assets = { path = "../assets/mod" }
 maud = "0.25.0"
-http = "0.2"                                                           # General-purpose crate with common HTTP types.
-spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.1" } # The Spin SDK.
 anyhow = "1.0.75"
 build-time = "0.1.3"
 once_cell = "1.18.0"
 chrono = "0.4.31"
+axum = "0.7.3"
+tokio = { version = "1.35.1", features = ["full"] }
