--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,4 @@ once_cell = "1.18.0"
 chrono = "0.4.31"
 axum = "0.7.3"
 tokio = { version = "1.35.1", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["fs"] }
