Try using lib_wasm_pack for compiling the browser crate.

--- a/assets/macro/Cargo.toml
+++ b/assets/macro/Cargo.toml
@@ -31,3 +31,4 @@ base64 = "0.21.5"
 # image_captioner = "0.2.2"
 uuid = { version = "1.6.1", features = ["v4"] }
 tailwind_cli = { git = "https://github.com/rainsound-ai/tailwind-cli" }
+lib_wasm_pack = { git = "https://github.com/rainsound-ai/lib-wasm-pack" }
