Switch to Render for hosting. (#1)
* Rename the serverless_functions crate to server.

* Add Axum and Tokio dependencies.

* Delete a Spin-related test.

* Delete spin.toml.

* Switch server from a lib crate to a binary crate.

* Remove references to the Spin SDK.

* Refactor some imports in shared/router.rs.

* Implement Route.register_axum_route().

* Rename shared/router.rs to shared/route.rs and server/router.rs to server/route.rs.

* Rename shared/router.rs to shared/route.rs and server/router.rs to server/route.rs.

* Remove `pub use route::*` in shared/prelude.rs.

* Set up Axum to serve our routes.

* Add a health check route.

* Temporarily remove the image_captioner dependency because it's breaking when we try to compile on render.com.

* Fix a compilation error.

* Skip running the Tailwind and wasm-pack CLI's when building on render.com.

* Respect the PORT environment variable.

* Compile assets.

* Use the tailwind_cli crate for building CSS. This should enable Tailwind builds on Render.

* Update tailwind_cli crate.

* Update tailwind_cli crate again.

* Try using lib_wasm_pack for compiling the browser crate.

* Re-enable builds on Render.

* Remove the check for the cargo install version of wasm-pack.

* Update to the latest versions of lib_wasm_pack and tailwind_cli.

* Remove render module since it's no longer needed.

---------

Co-authored-by: Luca Bailey <mail@photon.garden>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,5 @@
 [workspace]
-members = [
-    "serverless_functions",
-    "shared",
-    "assets/mod",
-    "assets/runtime",
-    "assets/macro",
-]
+members = ["server", "shared", "assets/mod", "assets/runtime", "assets/macro"]
 exclude = [
     # If we add the browser crate to the workspace, building causes
     # a deadlock. This is because:
@@ -47,3 +41,6 @@ opt-level = 3
 opt-level = 3
 [profile.bench.package.image]
 opt-level = 3
+
+[install]
+root = "target/cargo_install"
