--- a/assets/macro/Cargo.toml
+++ b/assets/macro/Cargo.toml
@@ -28,5 +28,7 @@ image = "0.24.7"
 prettyplease = "0.2.15"
 mime = "0.3.17"
 base64 = "0.21.5"
-image_captioner = "0.1.10"
+# image_captioner = "0.2.2"
 uuid = { version = "1.6.1", features = ["v4"] }
+tailwind_cli = { git = "https://github.com/rainsound-ai/tailwind-cli" }
+lib_wasm_pack = { git = "https://github.com/rainsound-ai/lib-wasm-pack" }
